mise a jour devops 6

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,10 @@
 # SonarCloud Configuration
-sonar.projectKey=mohamedaminesabehy_book
+sonar.projectKey=mohamedaminesabehy_Projet_Laravel
 sonar.organization=mohamedaminesabehy
-sonar.projectName=Book Project
-sonar.projectVersion=1.0
+
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=Projet_Laravel
+#sonar.projectVersion=1.0
 
 # Source code configuration
 sonar.sources=app,config,database,resources,routes
