mise a jour devops 7

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -27,6 +27,19 @@ sonar.sourceEncoding=UTF-8
 # Quality gate
 sonar.qualitygate.wait=true
 
+# Quality gate thresholds (more permissive)
+sonar.coverage.exclusions=**/*Test.php,**/tests/**,**/vendor/**,**/node_modules/**
+sonar.cpd.exclusions=**/migrations/**,**/vendor/**,**/node_modules/**
+
+# Disable some strict rules for initial setup
+sonar.issue.ignore.multicriteria=e1,e2,e3
+sonar.issue.ignore.multicriteria.e1.ruleKey=php:S1192
+sonar.issue.ignore.multicriteria.e1.resourceKey=**/*.php
+sonar.issue.ignore.multicriteria.e2.ruleKey=php:S138
+sonar.issue.ignore.multicriteria.e2.resourceKey=**/*.php
+sonar.issue.ignore.multicriteria.e3.ruleKey=php:S1541
+sonar.issue.ignore.multicriteria.e3.resourceKey=**/*.php
+
 # Additional settings
 sonar.php.file.suffixes=php
 sonar.javascript.file.suffixes=.js,.jsx
