mise a jour devops 29

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -311,6 +311,38 @@ jobs:
               image: redis:7-alpine
               ports:
                 - "6379:6379"
+            prometheus:
+              image: prom/prometheus:latest
+              ports:
+                - "9090:9090"
+              volumes:
+                - ./docker/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+              command:
+                - '--config.file=/etc/prometheus/prometheus.yml'
+                - '--storage.tsdb.path=/prometheus'
+                - '--web.enable-lifecycle'
+            grafana:
+              image: grafana/grafana:latest
+              ports:
+                - "3000:3000"
+              volumes:
+                - ./docker/grafana/provisioning:/etc/grafana/provisioning
+                - ./docker/grafana/dashboards:/var/lib/grafana/dashboards
+              environment:
+                - GF_SECURITY_ADMIN_USER=admin
+                - GF_SECURITY_ADMIN_PASSWORD=admin123
+                - GF_USERS_ALLOW_SIGN_UP=false
+              depends_on:
+                - prometheus
+            node-exporter:
+              image: prom/node-exporter:latest
+              ports:
+                - "9100:9100"
+              command:
+                - '--path.procfs=/host/proc'
+                - '--path.rootfs=/rootfs'
+                - '--path.sysfs=/host/sys'
+                - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
           EOF
           
           # Start containers in detached mode (background) using Docker Compose V2
@@ -322,6 +354,24 @@ jobs:
           
           # Check container status
           docker compose ps
+          
+          # Verify Prometheus and Grafana are accessible
+          echo "🔍 Verifying monitoring services..."
+          
+          # Check Prometheus health
+          echo "Checking Prometheus health..."
+          timeout 60 bash -c 'until curl -f http://localhost:9090/-/healthy; do echo "Waiting for Prometheus..."; sleep 5; done' || echo "⚠️ Prometheus health check timeout"
+          
+          # Check Grafana health
+          echo "Checking Grafana health..."
+          timeout 60 bash -c 'until curl -f http://localhost:3000/api/health; do echo "Waiting for Grafana..."; sleep 5; done' || echo "⚠️ Grafana health check timeout"
+          
+          # Display monitoring URLs for reference
+          echo "📊 Monitoring services are available at:"
+          echo "  - Prometheus: http://localhost:9090"
+          echo "  - Grafana: http://localhost:3000 (admin/admin123)"
+          echo "  - Node Exporter: http://localhost:9100"
+          
           echo "✅ Containers started successfully in background!"
 
       - name: Build and push Docker image (Enhanced)
