--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,18 +2,17 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ main ]
   workflow_dispatch:
     inputs:
       environment:
         description: 'Environnement de déploiement'
         required: true
-        default: 'staging'
+        default: 'production'
         type: choice
         options:
-        - staging
         - production
         - local
       
@@ -463,9 +462,9 @@ jobs:
     name: Deploy Application
     runs-on: ubuntu-latest
     needs: build-and-push
-    if: always() && github.event_name == 'push' && (needs.build-and-push.result == 'success' || needs.build-and-push.result == 'skipped') && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
+    if: always() && github.event_name == 'push' && (needs.build-and-push.result == 'success' || needs.build-and-push.result == 'skipped') && github.ref == 'refs/heads/main'
     environment: 
-      name: ${{ github.ref == 'refs/heads/main' && 'production' || 'staging' }}
+      name: production
     
     steps:
       - name: Checkout code
