mise a jour devops 35

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,7 +17,7 @@ on:
         - local
       
       docker_hub_username:
-        description: 'Nom d\'utilisateur Docker Hub (pour exécution locale)'
+        description: "Nom d'utilisateur Docker Hub (pour exécution locale)"
         required: false
         default: 'yassineroube'
       
