mise a jour devops 36

--- a/docker/php/local.ini
+++ b/docker/php/local.ini
@@ -1,28 +1,45 @@
-upload_max_filesize=40M
-post_max_size=40M
-memory_limit=512M
-max_execution_time=600
-max_input_vars=3000
-max_input_time=1000
+; File upload settings
+upload_max_filesize = 50M
+post_max_size = 50M
+max_file_uploads = 20
+
+; Memory and execution settings
+memory_limit = 512M
+max_execution_time = 300
+max_input_time = 300
 
 ; Error reporting
-display_errors=Off
-log_errors=On
-error_log=/var/log/php_errors.log
+display_errors = Off
+display_startup_errors = Off
+log_errors = On
+error_log = /var/log/php_errors.log
 
-; Session
-session.cookie_httponly=On
-session.use_only_cookies=On
-session.cookie_secure=Off
+; Session settings
+session.gc_maxlifetime = 1440
+session.cookie_lifetime = 0
 
-; Security
-expose_php=Off
+; Security settings
+expose_php = Off
+allow_url_fopen = On
+allow_url_include = Off
 
 ; OPcache settings
-opcache.enable=1
-opcache.enable_cli=1
-opcache.memory_consumption=128
-opcache.interned_strings_buffer=8
-opcache.max_accelerated_files=4000
-opcache.revalidate_freq=2
-opcache.fast_shutdown=1
+opcache.enable = 1
+opcache.enable_cli = 1
+opcache.memory_consumption = 128
+opcache.interned_strings_buffer = 8
+opcache.max_accelerated_files = 4000
+opcache.revalidate_freq = 2
+opcache.fast_shutdown = 1
+
+; Disable problematic SOAP settings that cause errors
+soap.wsdl_cache_enabled = 0
+soap.wsdl_cache_dir = ""
+soap.wsdl_cache_ttl = 0
+
+; Improve performance and stability
+realpath_cache_size = 4096K
+realpath_cache_ttl = 600
+
+; Disable functions that can cause issues in containers
+disable_functions = exec,passthru,shell_exec,system,popen
