--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "barryvdh/laravel-dompdf": "^3.1",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "promphp/prometheus_client_php": "^2.7",
         "srmklive/paypal": "*"
     },
     "require-dev": {
