--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -2,30 +2,103 @@ server {
     listen 80;
     server_name localhost;
     root /var/www/html/public;
+    index index.php index.html;
 
-    add_header X-Frame-Options "SAMEORIGIN";
-    add_header X-Content-Type-Options "nosniff";
+    # Enable access and error logs
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log warn;
 
-    index index.php;
+    # Increase client body size for file uploads
+    client_max_body_size 50M;
+    client_body_timeout 60s;
+    client_header_timeout 60s;
 
-    charset utf-8;
+    # FastCGI timeout settings - increased for database operations
+    fastcgi_connect_timeout 120s;
+    fastcgi_send_timeout 120s;
+    fastcgi_read_timeout 120s;
+    fastcgi_buffer_size 128k;
+    fastcgi_buffers 4 256k;
+    fastcgi_busy_buffers_size 256k;
+    
+    # Proxy timeout settings
+    proxy_connect_timeout 120s;
+    proxy_send_timeout 120s;
+    proxy_read_timeout 120s;
 
+    # Handle favicon and robots.txt
+    location = /favicon.ico {
+        access_log off;
+        log_not_found off;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+
+    location = /robots.txt {
+        access_log off;
+        log_not_found off;
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+
+    # Static assets with caching
+    location ~* \.(css|js|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        access_log off;
+    }
+
+    # Main location block
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    location = /favicon.ico { access_log off; log_not_found off; }
-    location = /robots.txt  { access_log off; log_not_found off; }
-
-    error_page 404 /index.php;
-
+    # PHP processing with improved error handling
     location ~ \.php$ {
+        try_files $uri =404;
+        
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass 127.0.0.1:9000;
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_index index.php;
+        
         include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
+        
+        # Laravel specific parameters
+        fastcgi_param HTTP_PROXY "";
+        fastcgi_param HTTPS $https if_not_empty;
+        fastcgi_param SERVER_NAME $host;
+        
+        # Improved error handling
+        fastcgi_intercept_errors on;
+        
+        # Connection pooling
+        fastcgi_keep_conn on;
     }
 
-    location ~ /\.(?!well-known).* {
+    # Explicitly handle 404 errors
+    error_page 404 /index.php;
+
+    # Security: deny access to hidden files
+    location ~ /\. {
         deny all;
+        access_log off;
+        log_not_found off;
+    }
+
+    # Security: deny access to sensitive files
+    location ~* \.(htaccess|htpasswd|ini|log|sh|sql|conf)$ {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
+
+    # Security: deny access to vendor and storage directories
+    location ~ ^/(vendor|storage|bootstrap/cache) {
+        deny all;
+        access_log off;
+        log_not_found off;
     }
 }
